<resources>
    <string name="app_name">时享优品</string>
    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n否则将导致部分功能无法使用。</string>
    <string name="quit">退出</string>
    <string name="shop_home">首页</string>
    <string name="shop_activity">活动</string>
    <string name="shop_Mall">任务</string>
    <string name="shop_live_show">生活秀</string>
    <string name="shop_beautiful">会员</string>
    <string name="shop_creat">创建</string>
    <string name="shop_circle">圈子</string>
    <string name="shop_car">购物</string>
    <string name="shop_my">我的</string>
    <string name="shop_my_space">我</string>

    <string name="space_action">活动</string>
    <string name="space_zone">生活秀详情</string>
    <string name="space_circle">圈子</string>
    <string name="space_my_main">我的主页</string>
    <string name="space_timeshow">时刻秀场</string>
    <string name="space_creat">创建</string>
    <string name="space_chating">圈聊</string>
    <string name="space_my">我</string>
    <string name="creat_space_chatting">建圈聊</string>
    <string name="creat_space_video">传视频</string>
    <string name="create_space_action">建活动</string>
    <string name="shop_search">宝贝搜索</string>
    <string name="address_search">城市搜索</string>
    <string name="network_not_work">亲，请您再耐心等待一会儿或者换个信号好的地方!</string>
    <string name="cliick_show">点击查看</string>
    <string name="no_more">没有更多数据了.</string>
    <string name="getdatefail">获取数据失败</string>
    <string name="shop_title">购物车(%s)</string>
    <string name="count_money">合计：￥%s</string>
    <string name="count_goods">结算（%s）</string>
    <string name="xloading_dialog_message">正在加载中...</string>
    <string name="password_inputtype">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890-/:;()&quot;&amp;@.,?!&apos;[]{}#%^*+=_\|~&lt;&gt;</string>
    <string name="mobile_hint">请输入手机号</string>
    <string name="obtain_verification_code">获取验证码</string>
    <string name="obtain_verification_code_one">重新发送</string>
    <string name="send_mobile_verify_code_often">亲！你发送验证码忒频繁了。</string>
    <string name="verification_code_title">验证码:</string>
    <string name="invation_code_title">邀请码:</string>
    <string name="verification_code_null">验证码不能为空</string>
    <string name="verification_code_hint">手机验证码</string>
    <string name="mobile_null">您输入的手机号不能为空</string>
    <string name="mobile_length_limit">您输入的手机号格式不正确</string>
    <string name="password_hint">6&#8211;16位密码</string>
    <string name="password_length_limit">请输入6&#8211;16位密码</string>
    <string name="password_length_limit_again">请再次输入密码</string>
    <string name="zone_img_position">circle_img_position</string>


    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="know">知道了</string>
    <string name="tip">提示</string>
    <string name="wait_dialog_title">正在请求，请稍后…</string>

    <string name="wel_hint_1">欢迎页就是这么丑</string>
    <string name="wel_hint_3">反正你也不能来打我</string>

    <string name="nohttp">NoHttp</string>
    <string name="nohttp_slogan">让你的网络请求更简单</string>

    <!-- title field -->

    <string name="title_original_activity">NoHttp原始用法</string>
    <string name="title_method_activity">各种请求协议演示</string>
    <string name="title_image_activity">NoHttp请求图片</string>
    <string name="title_post_body_activity">POST一段JSON、自定包体</string>
    <string name="title_define_request_activity">自定义Request</string>
    <string name="title_json_activity">JsonObject、JsonArray演示</string>
    <string name="title_cache_activity">五种缓存策略</string>
    <string name="title_cache_http_activity">Http标准协议的缓存</string>
    <string name="title_cache_request_failed_read_cache_activity">请求网络失败返回缓存</string>
    <string name="title_cache_none_request_network_activity">没有缓存才去请求网络</string>
    <string name="title_cache_only_read_cache">仅仅读取缓存</string>
    <string name="title_cache_only_request_network">仅仅请求网络</string>
    <string name="title_redirect_activity">响应码300…重定向</string>
    <string name="title_upload_activity">文件上传</string>
    <string name="title_upload_single_activity">单个文件上传</string>
    <string name="title_upload_multi_activity">多个文件上传</string>
    <string name="title_upload_file_list_activity">文件List上传</string>
    <string name="title_upload_album">选择相册图片上传</string>
    <string name="title_download_activity">文件下载</string>
    <string name="title_download_single_activity">单个文件下载</string>
    <string name="title_download_list_activity">多个文件下载</string>
    <string name="title_cancel_activity">如何取消请求</string>
    <string name="title_cancel_linkage_activity">和Activity/Fragment声明周期联动</string>
    <string name="title_cancel_sign_activity">取消指定的某几个请求</string>
    <string name="title_cancel_all_activity">取消队列中所有请求</string>
    <string name="title_sync_activity">同步请求</string>
    <string name="title_proxy_activity">通过代理请求服务器</string>
    <string name="title_https_activity">Https请求演示</string>

    <!-- Common -->

    <string name="request_start">发起请求</string>

    <string name="request_original_result">响应码：%1$d\n花费时间：%2$d毫秒。</string>

    <string name="method_request_failed">有的方法为什么请求失败？</string>
    <string name="method_request_failed_reason">在RFC2616中规定了Http1.1支持的请求方法，有些服务器、客户端(Android系统)不支持某些请求方法，所以请求失败是正常的，但是我们还是要遵守协议，推荐服务器和客户端都支持，这是非常好的设计和体验。</string>

    <string name="request_succeed">请求成功</string>
    <string name="request_failed">请求失败</string>

    <!-- RequestMethod -->

    <string name="request_json_result">请求方法：%1$s\n请求地址：%2$s\n响应数据：%3$s\n业务状态码：%4$s。</string>
    <string name="request_succeed_head">请求成功, 请求方式为HEAD, 没有响应内容。</string>
    <string name="request_method_head">请求方法为HEAD，没有响应内容。</string>
    <string name="request_method_patch">服务器不支持的请求方法。</string>
    <string name="request_method_not_allow">服务器仅仅支持请求方法：%1$s</string>

    <!-- Json -->

    <string name="request_json_object">JsonObject对象</string>
    <string name="request_json_array">JsonArray对象</string>
    <string name="request_json_body_input_tip">请求输入提交的json。</string>
    <string name="request_define_fast_json">自定义FastJson请求</string>
    <string name="request_define_java_bean">自定义JavaBean请求</string>

    <!-- CacheStore -->

    <string name="request_from_cache">结果来自缓存</string>
    <string name="request_from_network">结果来自网络</string>
    <string name="request_cache_request_failed_read_cache_tip">具体的可以看看代码，仅仅一句话设置缓存模式就可以了，测试的朋友，可以先成功请求一次，然后断网再请求，就会返回缓存啦！</string>
    <string name="request_cache_only_read_cache_failed">缓存模式是Only_Read_Cache，但是没有找到缓存。</string>

    <!-- Redirect -->

    <string name="request_redirect_location">被重定向到URL：%1$s。</string>

    <!-- Upload and download -->

    <string name="upload_start">开始上传</string>
    <string name="upload_succeed">上传完毕</string>
    <string name="upload_failed">上传失败</string>
    <string name="upload_cancel">上传被取消</string>
    <string name="upload_error">上传发生错误</string>

    <string name="upload_file_status">文件状态：</string>
    <string name="upload_file_status_wait">等待操作…</string>
    <string name="upload_file_select_album">选择图片</string>
    <string name="upload_file_select_album_null">请选择图片</string>
    <string name="upload_file_select_album_null_again">文件不存在，请重新选择图片</string>

    <string name="download_mobile_data_tip">多任务下载四个文件，最好用WIFI测试喔。</string>
    <string name="download_start">开始下载</string>
    <string name="download_delete">删除文件</string>
    <string name="delete_succeed">删除成功</string>
    <!-- Download status -->
    <string name="download_progress">已下载：%1$d&#037;&#037;，速度：%2$skb&#047;s</string>
    <string name="download_status_pause">暂停</string>
    <string name="download_status_be_pause">下载被暂停</string>
    <string name="download_status_re_download">重新下载</string>
    <string name="download_status_again_download">再次尝试</string>
    <string name="download_status_resume">继续下载</string>
    <string name="download_status_finish">下载完成！</string>
    <!-- Download error -->
    <string name="download_error">下载出错了：%1$s</string>
    <string name="download_error_server">服务器数据错误！</string>
    <string name="download_error_network">网络不可用，请检查网络！</string>
    <string name="download_error_storage">存储卡错误，请检查存储卡！</string>
    <string name="download_error_space">存储卡空间不足！</string>
    <string name="download_error_timeout">下载超时！</string>
    <string name="download_error_un_know_host">找不到服务器。</string>
    <string name="download_error_url">URL地址错误。</string>
    <string name="download_error_un">未知错误。</string>

    <!-- Cancel -->
    <string name="no_operation_des">请看本Activity的代码和注释</string>

    <!-- error -->
    <string name="error_please_check_network">请检查网络。</string>
    <string name="error_timeout">请求超时，网络不好或者服务器不稳定。</string>
    <string name="error_not_found_server">未发现指定服务器，清切换网络后重试。</string>
    <string name="error_url_error">URL错误。</string>
    <string name="error_not_found_cache">没有找到缓存.</string>
    <string name="error_unknow">未知错误。</string>
    <string name="error_response_code">服务器响应码%1$d</string>
    <string name="error_response_code_dex">服务器响应码%1$d，如果你们服务器在这种情况下也返回数据你可以处理。</string>
    <string name="rationale_wirte_read">"时享优品需要访问您的读写权限！"</string>
</resources>
