<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_white"
              android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:layout_weight="1.0"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/include_top" />

            <LinearLayout
                android:layout_marginTop="@dimen/space_20"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingRight="@dimen/space_30"
                android:paddingLeft="30dp">
                <EditText
                    android:id="@+id/et_register_mobile"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_strock_gray_shape"
                    android:hint="@string/mobile_hint"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:paddingLeft="10dp"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/btn_register_obtain_verification_code"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/round_red_shape"
                    android:paddingBottom="10dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingTop="10dp"
                    android:text="@string/obtain_verification_code"
                    android:textColor="@color/color_white"
                    android:textSize="12dp" />
            </LinearLayout>

            <!-- 验证码 -->

            <RelativeLayout
                android:id="@+id/rl_verification"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/space_20"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <TextView
                    android:id="@+id/tv_register_verification_code_title"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/verification_code_title"
                    android:textColor="@color/color_333333"
                    android:visibility="gone"
                    android:textSize="15dp" />

                <com.yun.software.shangcheng.ui.ViewWidget.ClearEditText
                    android:id="@+id/et_register_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tv_register_verification_code_title"
                    android:background="@drawable/round_strock_gray_shape"
                    android:hint="@string/verification_code_hint"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingLeft="10dp"
                    android:paddingRight="@dimen/space_10"
                    android:textSize="14dp" />

            </RelativeLayout>

            <com.yun.software.shangcheng.ui.ViewWidget.ClearEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/space_20"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/round_strock_gray_shape"
                android:digits="@string/password_inputtype"
                android:drawablePadding="10dp"
                android:hint="请输入密码"
                android:maxLength="16"
                android:paddingLeft="10dp"
                android:paddingRight="@dimen/space_10"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/color_333333"
                android:textSize="16sp" />
            <com.yun.software.shangcheng.ui.ViewWidget.ClearEditText
                android:id="@+id/et_login_password_two"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/space_20"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/round_strock_gray_shape"
                android:digits="@string/password_inputtype"
                android:drawablePadding="10dp"
                android:hint="请再次输入密码"
                android:maxLength="16"
                android:paddingLeft="10dp"
                android:paddingRight="@dimen/space_10"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/color_333333"
                android:textSize="16sp" />
            <Button
                android:id="@+id/bt_regeist"
                android:layout_marginTop="@dimen/space_30"
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal"
                android:text="注册"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:background="@drawable/round_red_shape"
                android:layout_height="40dp"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>