<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/img_close_create"
        android:layout_marginBottom="@dimen/space_20"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lin_chatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/circle_white_shape"
                android:scaleType="centerInside"
                android:src="@drawable/img_creat_chatting"/>

            <TextView
                android:id="@+id/tv_create_chatting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/creat_space_chatting"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_upload_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/circle_white_shape"
                android:scaleType="centerInside"
                android:src="@drawable/video_upload"/>

            <TextView
                android:id="@+id/tv_upload_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/creat_space_video"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/circle_white_shape"
                android:scaleType="centerInside"
                android:src="@drawable/img_creat_action"/>

            <TextView
                android:id="@+id/tv_create_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/create_space_action"
                android:textColor="@color/white"
                android:textSize="14sp"/>

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/img_close_create"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:src="@drawable/img_build"/>


</RelativeLayout>